work in progress

--- a/postgresql.sty
+++ b/postgresql.sty
@@ -7,6 +7,7 @@
 \RequirePackage[english,russian]{babel}
 \RequirePackage[unicode,colorlinks=true,hypertexnames=false]{hyperref}
 \RequirePackage{color,listings}
+\RequirePackage[svgnames]{xcolor}
 
 \DeclareCaptionFont{white}{\color{white}}
 \DeclareCaptionFormat{listing}{\colorbox{gray}{\parbox{\textwidth}{#1#2#3}}}
