--- a/postgresql.tex
+++ b/postgresql.tex
@@ -1,24 +1,26 @@
-\documentclass[a4paper,12pt,oneside]{memoir}
+\documentclass[a5paper,12pt,oneside]{memoir}
+\usepackage[a5paper,top=5mm,bottom=5mm,left=5mm,right=5mm]{geometry}
+\usepackage{cmap}
 
 \usepackage{postgresql}
 \graphicspath{{images/}{schemes/}{software/}}
 
-\input{titlepages}
-\input{variables}
+%\input{titlepages}
+%\input{variables}
 
 \begin{document}
 
-\pagestyle{empty}
+%\pagestyle{empty}
 %\titleGM
-\titleTMB
-\clearpage
+%\titleTMB
+%\clearpage
 
-\input{postgresql_title}
+%\input{postgresql_title}
 
-\setcounter{page}{3}
-\pagestyle{myindex}
+%\setcounter{page}{3}
+%\pagestyle{myindex}
 %\chapterstyle{bianchi}
-\chapterstyle{ell}
+%\chapterstyle{ell}
 %\chapterstyle{ger}
 %\chapterstyle{madsen}
 %\chapterstyle{veelo}
